Fix HTML encoding issues in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -222,9 +222,11 @@ function proceed() {
   localStorage.setItem("hearing", hearing);
   localStorage.setItem("tech", tech);
 
-  window.location.href = "survey.html";
+  window.location.href = "instructions.html";
+
 }
 </script>
 
 </body>
 </html>
+
