Clarify statement about responses in instructions

--- a/public/instructions.html
+++ b/public/instructions.html
@@ -79,7 +79,7 @@
       Your responses should be based only on what you hear in the audio.
     </li>
     <li>
-      There are no right or wrong answers — we are interested in your honest perception.
+      There are no right or wrong answers. We are interested in your honest perception.
     </li>
     <li>
       You may replay any audio as many times as needed before responding.
