Fix formatting of APPS_SCRIPT_URL declaration

--- a/public/survey.html
+++ b/public/survey.html
@@ -121,10 +121,7 @@
 </div>
 
 <script>
-const APPS_SCRIPT_URL="https://script.google.com/macros/s/AKfycbxNOlfNj-Y55V-gvLHxQg4TyXCphUzU7jNpIdoG6fHRCLVJ__6GvdU7bf-WCfp_QieV/exec
-";
-
-
+const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxNOlfNj-Y55V-gvLHxQg4TyXCphUzU7jNpIdoG6fHRCLVJ__6GvdU7bf-WCfp_QieV/exec";
 const audioFiles = [
   "audio/DF_E_2000013.flac",
   "audio/DF_E_2000024.flac",
