Update thank you message in thankyou.html

--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -31,7 +31,7 @@
 <body>
 
 <div class="card">
-  <h1>Thank You!</h1>
+  <h1>Thank You for completing this survey!</h1>
   <p>Your responses have been successfully recorded.</p>
   <p>Your participation is valuable for this research.</p>
   <p>You may now close this page.</p>
