Update placeholder text for comments textarea

--- a/public/survey.html
+++ b/public/survey.html
@@ -144,7 +144,7 @@
     Please select one artifact category.
   </div>
 
-  <textarea id="comments" placeholder="Additional comments (optional)..."></textarea>
+  <textarea id="comments" placeholder="Additional comments..."></textarea>
   <br><br>
 
   <button onclick="submitAndNext()">Next Sample</button>
